# prettify-pdf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: validate.yml
agents/: default.yaml
docs/: agent-compatibility.md  publishing-directories.md  quality-gates.md  release-checklist.md  usage-claude-openclaw.md
evals/: evals.json
examples/: prompts.md
references/: quality-checklist.md
scripts/: pdf_guardrails.py  validate_skill.py
