[project]
name = "prettify-pdf-skill"
version = "0.1.0"
description = "Agent Skill for prettifying PDFs without breaking IDs, dates, amounts, barcodes, QR codes, seals, signatures, or source meaning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sethu Pavan" }
]
keywords = [
  "agent-skills",
  "pdf",
  "document-ai",
  "local-first",
  "skill-md"
]
dependencies = []

[project.optional-dependencies]
guardrails = [
  "pymupdf>=1.24",
  "pillow>=10"
]
dev = []

[tool.prettify-pdf-skill]
skill = "SKILL.md"
provider_neutral = true
requires_api_key = false
